[package]
name = "blights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.114"
